# webgpu-bip39-generator

./: .gitignore  .gitmodules  Cargo.toml  dump.txt  dump_full.txt  rustfmt.toml
src/: addresses.txt  bip39.rs  device.rs  main.rs  solver.rs  tests.rs  utils.rs
src/shaders/: bip39-filter.wgsl  derivation_stage.wgsl  filter_stage.wgsl  main.wgsl  pbkdf2.wgsl  pbkdf2_hmac.wgsl  sha512.wgsl  sha512_claude.wgsl  short256.wgsl  test_filter.wgsl  test_pbkdf2.wgsl  test_sha512.wgsl  test_short256.wgsl  testsha256.wgsl
src/solver/: derivation_stage.wgsl  filter_stage.wgsl  mod.rs  passes.rs  pipeline.rs  types.rs  utils.rs
src/solver/passes/: derivation.rs  derivation_stage.wgsl  filter.rs  filter_stage.wgsl  mod.rs  reset.rs  reset_stage.wgsl
src/tests/: mod.rs  test_pbkdf2.wgsl  test_short256.wgsl
