[package]
name = "webgpu-bip39-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
bytemuck = "1"
pollster = { version = "0.4", features = ["macro"], default-features = false }
bip39 = "2"
oneshot = { version = "0.1", features = ["std"], default-features = false }
base58 = "0.2"
sha256-rs = "1"

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "25", default-features = false, features = [
	"wgsl",
	"dx12",
	"strict_asserts",
] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "25", default-features = false, features = [
	"wgsl",
	"vulkan",
	"strict_asserts",
] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "25", default-features = false, features = [
	"wgsl",
	"metal",
] }
