[package]
name = "webgpu-bip39-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
flume = { version = "0.12", default-features = false, features = ["spin"] }
pollster = { version = "0.4", features = ["macro"], default-features = false }
bytemuck = "1"
gxhash = "3.5.0"

# Parsing and Key derivation
bitcoin = "0.32.6"
bip39 = "2"
base58 = "0.2"

# Logging
log = "0.4.27"
simple_logger = { version = "5.0.0", default-features = false, features = [
	"colors",
] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "28", default-features = false, features = [
	"wgsl",
	"vulkan",
	"strict_asserts",
] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "28", default-features = false, features = [
	"wgsl",
	"vulkan",
	"strict_asserts",
] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "28", default-features = false, features = [
	"wgsl",
	"metal",
] }

[profile."optimized"]
inherits = "release"
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", features = ["sha2", "std"] }
sha2 = "0.10.9"
